# coilsPy

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  devrequirements.txt  requirements.txt  setup.sh
coilspy/: __init__.py  coilclass.py  initialization.py  selector.py
coilspy/generator/: coilclass.py  initialization.py  rescale_funs.py  selector.py
coilspy/neuralcoil/: __init__.py  neuralcoil.py
coilspy/normalization/: __init__.py  normalizer.py
dev/: coils_from_scratch_0.ipynb  coils_from_scratch_10.ipynb  coils_from_scratch_11.ipynb  coils_from_scratch_2.ipynb  coils_from_scratch_3.ipynb  coils_from_scratch_5.ipynb  coils_from_scratch_6.ipynb  coils_from_scratch_7.ipynb  coils_from_scratch_8.ipynb  development_tests_sampling_0.ipynb
dev/coil_normalization/: coilnorm_dev0.ipynb  coilnorm_dev1.ipynb  coilnorm_dev2.ipynb  coilnorm_dev3.ipynb  coilnorm_dev4.ipynb  coilnorm_dev5.ipynb  coilnorm_dev6.ipynb
dev/coils_from_scratch/: coils_from_scratch_1.ipynb  coils_from_scratch_10.ipynb  coils_from_scratch_11.ipynb  coils_from_scratch_12.ipynb  coils_from_scratch_13.ipynb  coils_from_scratch_14.ipynb  coils_from_scratch_15.ipynb  coils_from_scratch_3.ipynb  coils_from_scratch_4.ipynb  coils_from_scratch_5.ipynb  coils_from_scratch_6.ipynb  coils_from_scratch_7.ipynb  coils_from_scratch_8.ipynb  coils_from_scratch_9.ipynb
documentation/: coil_derivation.ipynb  coil_normalization.ipynb  complex_coil_generation.ipynb  neural_coil.ipynb
tests/: coil_test.ipynb  coilnorm_test.ipynb  test.ipynb
(+33 files in other folders)
