[tool.poetry]
name = "coilspy"
version = "0.1.0"
description = "A Python package for generating self-referencing Bayesian fields, also known as coils."
authors = ["ap0phasi <66261738+ap0phasi@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
einops = "^0.7.0"
torch = {version = "^2.3.0+cu121", source = "pytorch"}
torchvision = {version = "^0.18.0+cu121", source = "pytorch"}


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
plotly = "^5.20.0"
pandas = "^2.2.2"



[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
